# jvmti-rust

./: README.md
jvmti/: Cargo.toml  README.md
jvmti/src/: agent.rs  capabilities.rs  class.rs  context.rs  emulator.rs  error.rs  event.rs  event_handler.rs  lib.rs  main.rs  method.rs  options.rs  runtime.rs  thread.rs  util.rs  version.rs
jvmti/src/bytecode/: classfile.rs
jvmti/src/bytecode/io/: reader.rs  writer.rs
jvmti/src/environment/: jni.rs  jvm.rs  jvmti.rs  mod.rs
jvmti/src/instrumentation/: mod.rs
jvmti/src/instrumentation/asm/: mod.rs
jvmti/src/native/: mod.rs
jvmti/tests/: agent.rs
sample/: Cargo.toml  README.md
sample/src/: agent.rs  lib.rs
