[package]
name = "jvmti"
version = "0.5.0"
authors = [
  "Alex Pecsi <xea@blacklight.so>",
  "Robert Lu <robberphex@gmail.com>"
]
license = "Apache-2.0"
description = "JVM TI Rust binding"
keywords = [ "java", "jvm", "jvmti", "debugger" ]
documentation = "https://github.com/robberphex/jvmti-rust"
repository = "https://github.com/robberphex/jvmti-rust.git"

[lib]
crate_type = [ "cdylib", "rlib" ]

[dependencies]
libc = "0.2.*"
time = "0.1.*"
lazy_static = "0.2.*"
toml = "0.4.*"
serde = "1.0.*"
serde_derive = "1.0.*"
log = "0.4.20"
